subdomain to url_prefix, watchout man!

--- a/app/templates/xtu/base.html
+++ b/app/templates/xtu/base.html
@@ -1,6 +1,6 @@
 {% extends "bootstrap/base.html" %}
 
-{% block title %}IIECON{% endblock %}
+{% block title %}XTU 308{% endblock %}
 
 {% block content %}
 <nav class="navbar navbar-default" role="navigation">
@@ -13,7 +13,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="#">IIECON</a>
+      <a class="navbar-brand" href="#">XTU 308</a>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
