--- a/app/templates/xtu/index.html
+++ b/app/templates/xtu/index.html
@@ -1,4 +1,4 @@
-{% extends "xtu/base.html" %}
+{% extends "base.html" %}
 
 {% block title %}XTU 308{% endblock %}
 
@@ -10,6 +10,4 @@
         </div>
     </div>
 </div>
-        
-
 {% endblock %}
