--- a/app/templates/xtu/base.html
+++ b/app/templates/xtu/base.html
@@ -55,9 +55,9 @@
       </ul>
       <ul class="nav navbar-nav navbar-right">
           {% if current_usr.is_authenticated() %}
-          <li><a href="{{ url_for("auth.logout") }}>注销</a>"</li>
+          <li><a href="{{ url_for("auth.logout") }}">注销</a>"</li>
           {% else %}
-          <li><a href="{{ url_for("auth.login") }}>登录</a></li>
+          <li><a href="{{ url_for("auth.login") }}">登录</a></li>
           {% endif %}
       </ul>
     </div><!-- /.navbar-collapse -->
