--- a/app/templates/xtu/index.html
+++ b/app/templates/xtu/index.html
@@ -1,13 +1,35 @@
 {% extends "base.html" %}
+{% import "bootstrap/wtf.html" as wtf %}
 
 {% block title %}XTU 308{% endblock %}
 
 {% block page_content %}
 <div class="container">
-    <div class="container col-md-4">
-        <div class="page-header">
-            <h1>Welcome to XTU</h1>
-        </div>
+    
+    <div class="page-header">
+        <h1>Hello, {% if current_user.is_authenticated() %}{{ current_user.username }}{% else %}Stranger{% endif %}!</h1>
     </div>
+    
+    <div>
+    {% if current_user.can(Permission.WRITE_ARTICLES) %}
+    {{ wtf.quick_form(form) }}
+    {% endif %}
+    </div>
+    <ul class="posts">
+        {% for post in posts %}
+        <li class="post">
+            <div class="profile-thumbnail">
+                <a href="{{ url_for(".user", username=post.author.username) }}"><img class="img-rounded profile-thumbnail" src="{{ post.author.gravatar(size=40) }}"></a>
+            </div>
+            <div class="post-content">
+                <div class="post-date">{{ moment(post.timestamp).fromNow() }}</div>
+                <div class="post-author">
+                    <a href="{{ url_for(".user", username=post.author.username) }}">{{ post.author.username }}</a>
+                </div>
+                <div class="post-body">{{ post.body }}</div>
+            </div>
+        </li>
+        {% endfor %}
+    </ul>
 </div>
 {% endblock %}
