--- a/app/templates/user.html
+++ b/app/templates/user.html
@@ -34,5 +34,7 @@
             {% endif %}
         </p>
     </div>
+    <h3>{{ user.username }} 的文章：</h3>
+    {% include "xtu/_posts.html" %}
 </div>
 {% endblock %}
