--- a/app/templates/xtu/index.html
+++ b/app/templates/xtu/index.html
@@ -25,3 +25,9 @@
     {% endif %}
 </div>
 {% endblock %}
+
+
+{% block scripts %}
+{{ super() }}
+{{ pagedown.include_pagedown() }}
+{% endblock %}
