--- a/app/templates/xtu/_posts.html
+++ b/app/templates/xtu/_posts.html
@@ -20,6 +20,11 @@
                 <a href="{{ url_for(".post", id=post.id) }}">
                     <span class="label label-default">链接</span>
                 </a>
+                {% if current_user == post.author %}
+                <a href="{{ url_for(".edit", id=post.id) }}"><span class="label label-primary">编辑</span></a>
+                {% elif current_user.is_administrator() %}
+                <a href="{{ url_for(".edit", id=post.id) }}"><span class="label label-primary">编辑[管理员]</span></a>
+                {% endif %}
             </div>
         </div>
     </li>
