--- a/app/templates/auth/change_email.html
+++ b/app/templates/auth/change_email.html
@@ -4,10 +4,12 @@
 {% block title %}IIECON - 修改邮箱地址{% endblock %}
 
 {% block page_content %}
+<div class="container">
 <div class="page-header">
     <h1>修改邮箱地址</h1>
 </div>
 <div class="col-md-4">
     {{ wtf.quick_form(form) }}
+</div>
 </div>
 {% endblock %}
