--- a/app/templates/auth/login.html
+++ b/app/templates/auth/login.html
@@ -4,6 +4,7 @@
 {% block title %}IIECON - 登录{% endblock %}
 
 {% block page_content %}
+<div class="container">
 <div class="page-header">
     <h1>登录</h1>
 </div>
@@ -11,6 +12,8 @@
     {{ form.hidden_tag() }}
     {{ wtf.quick_form(form) }}
     <br>
+    <p>忘记密码？ <a href="{{ url_for('auth.password_reset_request') }}">点击修改密码</a></p>
     <p>新用户？<a href="{{ url_for("auth.register") }}">点击注册</a></p>
+</div>
 </div>
 {% endblock %}
