--- a/app/templates/auth/register.html
+++ b/app/templates/auth/register.html
@@ -4,10 +4,12 @@
 {% block title %}IIECON - 注册{% endblock %}
 
 {% block page_content %}
+<div class="container">
 <div class="page-header">
     <h1>注册</h1>
 </div>
 <div class="col-md-4">
     {{ wtf.quick_form(form) }}
+</div>
 </div>
 {% endblock %}
