--- a/app/templates/auth/reset_password.html
+++ b/app/templates/auth/reset_password.html
@@ -4,10 +4,12 @@
 {% block title %}IIECON - 密码重设{% endblock %}
 
 {% block page_content %}
+<div class="container">
 <div class="page-header">
     <h1>重设密码</h1>
 </div>
 <div class="col-md-4">
     {{ wtf.quick_form(form) }}
+</div>
 </div>
 {% endblock %}
