--- a/app/templates/user.html
+++ b/app/templates/user.html
@@ -3,6 +3,7 @@
 {% block title %}IIECON - {{ user.username }}{% endblock %}
 
 {% block page_content %}
+<div class="container">
 <div class="page-header">
     <img class="img-rounded profile-thumbnail" src="{{ user.gravatar(size=256) }}">
     <div class="profile-header">
@@ -22,8 +23,8 @@
         {% endif %}
         {% if user.about_me %}<p>{{ user.about_me }}</p>{% endif %}
         <p>
-            Member since {{ moment(user.member_since).format("L") }}.
-            Last seen {{ moment(user.last_seen).fromNow() }}.
+            加入于 {{ moment(user.member_since).format("L") }}. <br>
+            最后登录 {{ moment(user.last_seen).fromNow() }}.
         </p>
         <p>
             {% if user == current_user %}
@@ -34,7 +35,11 @@
             {% endif %}
         </p>
     </div>
+    <br>
+    <div class="container col-md-8">
     <h3>{{ user.username }} 的文章：</h3>
     {% include "xtu/_posts.html" %}
+    </div>
+</div>
 </div>
 {% endblock %}
