--- a/app/templates/xtu/_posts.html
+++ b/app/templates/xtu/_posts.html
@@ -1,3 +1,7 @@
+
+{{ moment.include_jquery() }}
+{{ moment.include_moment() }}
+
 <ul class="posts">
     {% for post in posts %}
     <li class="post">
@@ -9,17 +13,17 @@
         <div class="post-content">
             <div class="post-date">{{ moment(post.timestamp).fromNow() }}</div>
             <div class="post-author"><a href="{{ url_for('.user', username=post.author.username) }}">{{ post.author.username }}</a></div>
+            <div class="post-title"><h3>《{{ post.title }}》</h3></div>
             <div class="post-body">
                 {% if post.body_html %}
-                    {{ post.body_html | safe }}
+                    {{ post.body_html[0:150] | safe }} 
+                    <p>......</p>
+                    <a href="{{ url_for('.post', id=post.id) }}" target="view_window"><i>查看全文</i></a>
                 {% else %}
-                    {{ post.body }}
+                    {{ post.body[0:130] }} ......
                 {% endif %}
             </div>
             <div class="post-footer">
-                <a href="{{ url_for(".post", id=post.id) }}">
-                    <span class="label label-default">链接</span>
-                </a>
                 {% if current_user == post.author %}
                 <a href="{{ url_for(".edit", id=post.id) }}"><span class="label label-primary">编辑</span></a>
                 {% elif current_user.is_administrator() %}
@@ -35,3 +39,6 @@
     </li>
     {% endfor %}
 </ul>
+
+
+
