--- a/app/templates/xtu/newpost.html
+++ b/app/templates/xtu/newpost.html
@@ -1,17 +1,22 @@
 {% extends "base.html" %}
 {% import "bootstrap/wtf.html" as wtf %}
 
-{% block title %}IIECON - 编辑文章{% endblock %}
+{% block title %}IIECON - 新文章 {% endblock %}
 
 {% block page_content %}
 <div class="container">
 <div class="container col-md-8">
+
 <div class="page-header">
-    <h1>编辑文章</h1>
+    <h1>发布文章</h1>
 </div>
+
 <div>
+    {% if current_user.can(Permission.WRITE_ARTICLES) %}
     {{ wtf.quick_form(form) }}
+    {% endif %}
 </div>
+
 </div>
 </div>
 {% endblock %}
