--- a/app/templates/xtu/post.html
+++ b/app/templates/xtu/post.html
@@ -3,10 +3,44 @@
 {% import "xtu/_macros.html" as macros %}
 
 
+
 {% block title %}IIECON - 文章{% endblock %}
 
 {% block page_content %}
-{% include 'xtu/_posts.html' %}
+<div class="container">
+<div class="container col-md-8">
+<div class="post-title">
+    <h2 class=page-header>{{ post.title }}</h2></p>
+</div>
+        <div class="post-thumbnail">
+            <a href="{{ url_for('.user', username=post.author.username) }}">
+                <img class="img-rounded profile-thumbnail" src="{{ post.author.gravatar(size=40) }}">
+            </a>
+        </div>
+        <div class="post-content">
+            <div class="post-date">{{ moment(post.timestamp).fromNow() }}</div>
+            <div class="post-author"><a href="{{ url_for('.user', username=post.author.username) }}">{{ post.author.username }}</a></div>
+            <div class="post-body">
+                {% if post.body_html %}
+                    {{ post.body_html | safe }} 
+                {% else %}
+                    {{ post.body}}
+                {% endif %}
+            </div>
+            <div class="post-footer">
+                {% if current_user == post.author %}
+                <a href="{{ url_for(".edit", id=post.id) }}"><span class="label label-primary">编辑</span></a>
+                {% elif current_user.is_administrator() %}
+                <a href="{{ url_for(".edit", id=post.id) }}"><span class="label label-primary">编辑[管理员]</span></a>
+                {% endif %}
+                <a href="{{ url_for(".post", id=post.id )}}#comments">
+                    <span class="label label-primary">
+                        {{ post.comments.count() }} 评论
+                    </span>
+                </a>
+            </div>
+        </div>
+
 
 <h4 id="comments">评论</h4>
 {% if current_user.can(Permission.COMMENT) %}
@@ -21,6 +55,12 @@
     fragment = "#comments", id=posts[0].id) }}
 </div>
 {% endif %}
-
+</div>
+</div>
 {% endblock %}
 
+{% block scripts %}
+{{ super() }}
+        {{ moment.include_jquery() }}
+        {{ moment.include_moment() }}
+{% endblock %}
