--- a/app/templates/index/index.html
+++ b/app/templates/index/index.html
@@ -1,8 +1,12 @@
-{% extends "base.html" %}
+<!DOCTYPE html>
+<html>
+<head>
+    <title>IIECON - 首页</title>
+</head>
+<body>
 
-{% block page_content %}
-<div class="page-header">
-    <h1>Welcome to IIECON!</h1>
-</div>
+<p>进入 308 博客群， <a href="{{ url_for('xtu.index') }}">点击</a>  </p>
 
-{% endblock %}
+
+</body>
+</html>
