--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -33,10 +33,11 @@
               个人资料
             </a></li>
             <li><a href="{{ url_for('auth.logout') }}">注销</a></li>
+            {% if current_user.can(Permission.MODERATE_COMMENTS) %}
             <li class="divider"></li>
-            {% if current_user.can(Permission.MODERATE_COMMENTS) %}<li><a href="{{ url_for("xtu.moderate") }}">修改评论</a></li>
+            <li><a href="{{ url_for("xtu.moderate") }}">修改评论</a></li>
+            <li class="divider"></li>
             {% endif %}
-            <li class="divider"></li>
           </ul>
         </li>
         {% else %}
@@ -49,17 +50,25 @@
 {% endblock %}
 
 {% block content %}
-<div class="container">
+    <div class="container">
 
-    {% for message in get_flashed_messages() %}
-    <div class="alert alert-warning">
-        <button type="button" class="close" data-dismiss="alert">&times;</button>
-        {{ message }}
+        {% for message in get_flashed_messages() %}
+        <div class="alert alert-warning">
+            <button type="button" class="close" data-dismiss="alert">&times;</button>
+            {{ message }}
+        </div>
+        {% endfor %}
+
     </div>
-    {% endfor %}
+        {% block page_content %}{% endblock %}
 
-</div>
-    {% block page_content %}{% endblock %}
+
+
+    <footer>
+      <div class="container">
+        <p class="text-center"> Copyright &copy; XTU 308 </p>
+      </div>
+    </footer>
 
 
 
