--- a/app/templates/edit_profile.html
+++ b/app/templates/edit_profile.html
@@ -4,10 +4,12 @@
 {% block title %}IIECON - 编辑资料{% endblock %}
 
 {% block page_content %}
+<div class="container">
 <div class="page-header">
     <h1>编辑个人资料</h1>
 </div>
 <div class="col-md-4">
     {{ wtf.quick_form(form) }}
+</div>
 </div>
 {% endblock %}
