--- a/app/templates/xtu/moderate.html
+++ b/app/templates/xtu/moderate.html
@@ -4,6 +4,8 @@
 {% block title %}IIECON - 修改评论{% endblock %}
 
 {% block page_content %}
+<div class="container">
+<div class="container col-md-8">
 <div class="page-header">
     <h1>修改评论</h1>
 </div>
@@ -14,4 +16,6 @@
     {{ macros.pagination_widget(pagination, '.moderate') }}
 </div>
 {% endif %}
+</div>
+</div>
 {% endblock %}
