--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -34,6 +34,7 @@
             </a></li>
             <li><a href="{{ url_for('auth.change_password') }}">修改密码</a></li>
             <li><a href="{{ url_for('auth.change_email_request') }}">修改邮箱地址</a></li>
+            <li class="divider"></li>
             <li><a href="{{ url_for('auth.logout') }}">注销</a></li>
             {% if current_user.can(Permission.MODERATE_COMMENTS) %}
             <li class="divider"></li>
