--- a/app/templates/index/index.html
+++ b/app/templates/index/index.html
@@ -5,7 +5,7 @@
 </head>
 <body>
 
-<p>进入 308 博客群， <a href="{{ url_for('xtu.index') }}">点击</a>  </p>
+<h1>进入 308 博客群， <a href="{{ url_for('xtu.index') }}">点击</a></h1>
 
 
 </body>
