--- a/app/templates/user.html
+++ b/app/templates/user.html
@@ -37,7 +37,7 @@
         </p>
     </div>
     <br>
-    <div class="container col-md-8">
+    <div class="container col-md-8" id="user-articles">
     <h3>{{ user.username }} 的文章：</h3>
     {% include "xtu/_posts.html" %}
     </div>
