--- a/app/templates/xtu/_posts.html
+++ b/app/templates/xtu/_posts.html
@@ -16,7 +16,7 @@
             <div class="post-title"><h3>《{{ post.title }}》</h3></div>
             <div class="post-body">
                 {% if post.body_html %}
-                    {{ post.body_html[0:150] | safe }} 
+                    {{ post.body_html[0:150] | safe }} </code></pre>
                     <p>......</p>
                     <a href="{{ url_for('.post', id=post.id) }}" target="view_window"><i>查看全文</i></a>
                 {% else %}
