--- a/app/templates/xtu/post.html
+++ b/app/templates/xtu/post.html
@@ -4,7 +4,7 @@
 
 
 
-{% block title %}IIECON - 文章{% endblock %}
+{% block title %}IIECON - {{ post.author.name }}《{{ post.title }}》{% endblock %}
 
 {% block page_content %}
 <div class="container">
@@ -20,7 +20,7 @@
         <div class="post-content">
             <div class="post-date">{{ moment(post.timestamp).fromNow() }}</div>
             <div class="post-author"><a href="{{ url_for('.user', username=post.author.username) }}">{{ post.author.username }}</a></div>
-            <div class="post-body">
+            <div class="post-body" id="article">
                 {% if post.body_html %}
                     {{ post.body_html | safe }} 
                 {% else %}
@@ -38,10 +38,12 @@
                         {{ post.comments.count() }} 评论
                     </span>
                 </a>
+                <div class="bdsharebuttonbox"><a title="分享到QQ空间" href="#" class="bds_qzone" data-cmd="qzone"></a><a title="分享到微信" href="#" class="bds_weixin" data-cmd="weixin"></a><a title="分享到QQ好友" href="#" class="bds_sqq" data-cmd="sqq"></a><a title="分享到新浪微博" href="#" class="bds_tsina" data-cmd="tsina"></a><a title="分享到腾讯微博" href="#" class="bds_tqq" data-cmd="tqq"></a><a title="分享到人人网" href="#" class="bds_renren" data-cmd="renren"></a><a title="分享到邮件分享" href="#" class="bds_mail" data-cmd="mail"></a><a href="#" class="bds_more" data-cmd="more"></a></div>
             </div>
         </div>
 
-
+<div>
+<br>
 <h4 id="comments">评论</h4>
 {% if current_user.can(Permission.COMMENT) %}
 <div class="comment-form">
@@ -57,10 +59,12 @@
 {% endif %}
 </div>
 </div>
+</div>
 {% endblock %}
 
 {% block scripts %}
 {{ super() }}
         {{ moment.include_jquery() }}
         {{ moment.include_moment() }}
+<script>window._bd_share_config={"common":{"bdSnsKey":{},"bdText":"","bdMini":"2","bdMiniList":false,"bdPic":"","bdStyle":"1","bdSize":"16"},"share":{}};with(document)0[(getElementsByTagName('head')[0]||body).appendChild(createElement('script')).src='http://bdimg.share.baidu.com/static/api/js/share.js?v=89860593.js?cdnversion='+~(-new Date()/36e5)];</script>
 {% endblock %}
