--- a/app/templates/blog/index.html
+++ b/app/templates/blog/index.html
@@ -4,13 +4,7 @@
 
 {% block page_content %}
     <h2>List of stuff</h2>
-    <ul>
-        {% for article in articles %}
-        <li>
-            <a href="{{ url_for("blog.article", path=article.path) }}">{{ article.title }}</a>
-        </li>
-        {% else %}
-        <li> No stuff. </li>
-        {% endfor %}
-    </ul>
+    {% with pages=articles  %}
+        {% include "blog/_list.html" %}
+    {% endwith %}
 {% endblock page_content %}
